--- a/ft_ls/Makefile
+++ b/ft_ls/Makefile
@@ -16,7 +16,7 @@ ODIR		=	./objs
 # ft_ls :
 
 LS_FILES	=	main.c process_folders.c sorting.c printing.c \
-	parse_arguments.c structures_utils.c
+	parse_arguments.c structures_utils.c files_utils.c
 
 # **************************************************************************** #
 # Complete path :
