Added functions to simplify complex conditions

--- a/ft_ls/Makefile
+++ b/ft_ls/Makefile
@@ -16,7 +16,8 @@ ODIR		=	./objs
 # ft_ls :
 
 LS_FILES	=	main.c process_folders.c sorting.c printing.c \
-	parse_arguments.c structures_utils.c files_utils.c read_file.c
+	parse_arguments.c structures_utils.c files_utils.c read_file.c \
+	files_processing_conditions.c
 
 # **************************************************************************** #
 # Complete path :
