--- a/Dockerfiles/Dockerfile.dev
+++ b/Dockerfiles/Dockerfile.dev
@@ -18,13 +18,23 @@ RUN apt update \
 	make \
 	man-db \
 	openssh-client \
-	python \
+	python3.8 \
+	python3-pip \
+	python3-setuptools \
 	ruby \
 	ruby-bundler \
 	ruby-dev \
 	sudo \
 	vim \
 	zsh
+
+# Install python dependencies
+RUN pip3 install -U pytest
+
+# Install ydiff for nice diffs
+# (ydiff needs /usr/bin/python)
+RUN ln -s /usr/bin/python3.8 /usr/bin/python
+RUN pip3 install ydiff
 
 # Install 42 norminette
 RUN git clone https://github.com/hivehelsinki/norminette-client.git /.norminette \
