--- a/ft_ls/Makefile
+++ b/ft_ls/Makefile
@@ -16,9 +16,9 @@ ODIR		=	./objs
 # ft_ls :
 
 LS_FILES	=	main.c process_folders.c sorting.c printing.c \
-	parse_arguments.c structures_utils.c files_utils.c read_file.c \
-	files_processing_conditions.c process_folder_files.c get_folder_files.c \
-	error_utils.c
+	parse_arguments.c parse_path_arguments.c parse_flag_arguments.c \
+	structures_utils.c files_utils.c read_file.c files_processing_conditions.c \
+	process_folder_files.c get_folder_files.c error_utils.c
 
 # **************************************************************************** #
 # Complete path :
